# fhirquiz

./: .env.example  .gitignore  .local-fhir-config.json  .replit  CRITICAL-ISSUES.md  DEMO_SETUP.md  DEPLOY-NOW.md  DEPLOYMENT-NEXT-STEPS.md  DEPLOYMENT.md  GITHUB-ACTIONS-DEPLOY.md  Makefile  QA-SUMMARY.md  QA-TEST-PLAN.md  README.md  REFACTORING-ROADMAP.md  START-DEPLOYMENT.md  VERCEL-DEPLOY-INSTRUCTIONS.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  temp-package-patch.json  vercel.json  vitest.config.ts
ARTIFACTS/: QA_SNAPSHOT.md
api/: index.ts
artifacts/: test1.txt
attached_assets/: Pasted-1-Add-a-quiz-engine-frontend-backend-Prompt-to-Replit-AI-In-the-monorepo-implement-a-quiz-s-1756830138943_1756830138944.txt  Pasted-1-Project-scaffold-Prompt-to-Replit-AI-Create-a-monorepo-with-apps-frontend-React-Vite-Ta-1756822075267_1756822075267.txt  Pasted-In-apps-backend-db-add-schema-sql-and-policies-sql-Create-tables-profiles-id-uuid-pk-references--1756838609253_1756838609254.txt  Pasted-Prompt-to-Replit-AI-Add-prominent-CTAs-In-labs-when-locked-button-Start-Free-Trial-In-Demo--1756847231066_1756847231067.txt  Pasted-You-are-the-lead-QA-engineer-Implement-a-full-QA-suite-automated-manual-artifacts-for-the-bootc-1756836261456_1756836261457.txt
byod_artifacts/: test2.txt
playwright-report/: index.html
public/: robots.txt  sitemap.xml
scripts/: check-quality-gates.sh  dev.sh  qa-report-generator.ts
server/: auth.ts  config.ts  index.ts  routes-admin.ts  routes-auth.ts  routes-billing.ts  routes.ts  (+1 more)
(+140 files in other folders)
