[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.5.0",
    "reportlab>=4.4.3",
    "stripe>=12.5.0",
]
